--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@
 -e .
 
 # external requirements
+cauldron
 click
-Sphinx
 coverage
-awscli
+engarde
 flake8
+hypothesis
+ipdb
+numpy
+pandas
 python-dotenv>=0.5.1
+pytest
+Sphinx
