--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,64 @@
-# local package
--e .
-
-# external requirements
-cauldron
-click
-coverage
-engarde
-flake8
-hypothesis
-ipdb
-numpy
-pandas
-python-dotenv>=0.5.1
-pytest
-Sphinx
-tox
+aiopg==0.15.0
+aioredis==1.2.0
+alabaster==0.7.12
+async-timeout==3.0.1
+atomicwrites==1.2.1
+attrs==18.2.0
+Babel==2.6.0
+backcall==0.1.0
+cauldron==1.0.14
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+coverage==4.5.2
+decorator==4.3.0
+docutils==0.14
+engarde==0.4.0
+filelock==3.0.10
+flake8==3.6.0
+hiredis==0.3.1
+hypothesis==3.87.0
+idna==2.8
+imagesize==1.1.0
+ipdb==0.11
+ipython==7.2.0
+ipython-genutils==0.2.0
+jedi==0.13.2
+Jinja2==2.10
+MarkupSafe==1.1.0
+mccabe==0.6.1
+more-itertools==5.0.0
+numpy==1.15.4
+packaging==18.0
+pandas==0.23.4
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
+pip==18.1
+pluggy==0.8.1
+prompt-toolkit==2.0.7
+psycopg2==2.7.6.1
+ptyprocess==0.6.0
+py==1.7.0
+pycodestyle==2.4.0
+pyflakes==2.0.0
+Pygments==2.3.1
+pyparsing==2.3.0
+pytest==4.1.0
+python-dateutil==2.7.5
+python-dotenv==0.10.1
+pytz==2018.9
+requests==2.21.0
+setuptools==40.6.3
+six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==1.8.3
+sphinxcontrib-websupport==1.1.0
+src
+toml==0.10.0
+tox==3.7.0
+traitlets==4.3.2
+urllib3==1.24.1
+virtualenv==16.2.0
+wcwidth==0.1.7
+wheel==0.32.3
