--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ snowballstemmer==1.2.1
 Sphinx==1.8.3
 sphinxcontrib-websupport==1.1.0
 src
+tdda=1.0.13
 toml==0.10.0
 tox==3.7.0
 traitlets==4.3.2
