--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ pyflakes==2.0.0
 Pygments==2.3.1
 pyparsing==2.3.0
 pytest==4.1.0
+pytest.cov==2.6.1
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 pytz==2018.9
