--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ atomicwrites==1.2.1
 attrs==18.2.0
 Babel==2.6.0
 backcall==0.1.0
-cauldron==1.0.14
+cauldron-notebook==0.4.5
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -56,7 +56,7 @@ snowballstemmer==1.2.1
 Sphinx==1.8.3
 sphinxcontrib-websupport==1.1.0
 src
-tdda=1.0.13
+tdda==1.0.13
 toml==0.10.0
 tox==3.7.0
 traitlets==4.3.2
