--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,9 @@ ipython==7.2.0
 ipython-genutils==0.2.0
 jedi==0.13.2
 Jinja2==2.10
+jupyter==1.0.0
 MarkupSafe==1.1.0
+matplotlib==3.0.2
 mccabe==0.6.1
 more-itertools==5.0.0
 numpy==1.15.4
@@ -50,6 +52,8 @@ python-dateutil==2.7.5
 python-dotenv==0.10.1
 pytz==2018.9
 requests==2.21.0
+scipy==1.2.0
+seaborn==0.9.0
 setuptools==40.6.3
 six==1.12.0
 snowballstemmer==1.2.1
