--- a/requirements.txt
+++ b/requirements.txt
@@ -63,6 +63,7 @@ sphinxcontrib-websupport==1.1.0
 tdda==1.0.13
 toml==0.10.0
 tox==3.7.0
+tqdm==4.30.0
 traitlets==4.3.2
 urllib3==1.24.1
 virtualenv==16.2.0
