--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ numpy==1.15.4
 packaging==18.0
 pandas==0.23.4
 parso==0.3.1
+patsy==0.5.1
 pexpect==4.6.0
 pickleshare==0.7.5
 pip==18.1
@@ -60,6 +61,7 @@ six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==1.8.3
 sphinxcontrib-websupport==1.1.0
+statsmodels==0.9.0
 tdda==1.0.13
 toml==0.10.0
 tox==3.7.0
